Updated reset scss to have better sensible defaults; Fixed spacing issue for images within cards

--- a/src/scss/components/cards/_base.scss
+++ b/src/scss/components/cards/_base.scss
@@ -22,6 +22,7 @@
         position: relative;
 
         img {
+            display: block;
             width: 100%;
             height: auto;
             max-width: 100%;
